add BC html and 1109.html connect with it

--- a/1109.html
+++ b/1109.html
@@ -5,6 +5,24 @@
     <title>LCMS</title>
 </head>
 <body>
-LCMS
+<div>LCMS</div>
+<div>BC</div>
+<div class="relation">
+    <h3>LCMS</h3>
+    <p>Pair fall</p>
+</div>
+<h2 id="BCO">BCXMS</h2>
+<form method="post" action="/action_page.php" target="_blank">send</form>
+<form action="BC.html">#/action_page.php
+    User name:RESULT<br>
+    <input type="text" name="result"/>
+    <br>
+    <select name="relation">
+        <option value="broken">BROKEN</option>
+        <option value="contiue">CONTIUE</option>
+    </select>
+    <br><br>
+    <button type="submit">SUBMIT</button>
+</form>
 </body>
 </html>
